--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Description: 
  * @Author: Xinyue Cao
  * @Date: 2023-02-10 06:32:52
- * @LastEditTime: 2023-02-10 15:14:36
+ * @LastEditTime: 2023-02-13 09:25:35
  * @LastEditors: Xinyue Cao
 -->
 <html>
@@ -17,6 +17,10 @@
         <button onclick="startGame()">START GAME</button>
         <br>
         <button onclick="newCard()">NEW CARD</button>
+        <p id="player-el"></p>
+        <p id = "rule">
+        New Game: -$5; Fail: -$20; Black Jack: +$100  
+        </p>
         <script src="index.js"></script>
     </body>
 </html>
