--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Description: 
  * @Author: Xinyue Cao
  * @Date: 2023-02-10 06:32:52
- * @LastEditTime: 2023-02-13 09:25:35
+ * @LastEditTime: 2023-02-13 09:30:05
  * @LastEditors: Xinyue Cao
 -->
 <html>
@@ -19,7 +19,8 @@
         <button onclick="newCard()">NEW CARD</button>
         <p id="player-el"></p>
         <p id = "rule">
-        New Game: -$5; Fail: -$20; Black Jack: +$100  
+        New Game: -$5; Fail: -$20; Black Jack: +$100  <br><br>
+        made by Vitanie
         </p>
         <script src="index.js"></script>
     </body>
